# unit-test

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  testCase.cpp  testClassDrive.cpp  testClockCrossing.cpp  testCpp17.cpp  testCpp20.cpp  testEqual.cpp  testExplicit.cpp  testHash.cpp  testMemGuard.cpp  testMove.cpp  testRecurtion.cpp  testString.cpp  testTemplate.cpp  testTemplate2.cpp  testUnit.cpp  testUnorderdMap.cpp
cpp20/: init.cpp
docs/: project_overview.md
testAlgoruthm/: testSort.cpp
testDP/: testFactory.cpp
testDesignPattern/: README.md
testEffectiveCpp/: testConst.cpp  testInitial.cpp
testWork/: testClass.cpp  testClockCrossing.cpp  testFalsePath.cpp  testMemGuard.cpp
tests/algorithms/: testSort.cpp
tests/core/: testClassDrive.cpp  testEraseIf_test.cpp  testLamda_test.cpp  testMove_test.cpp  testStdCopy_test.cpp  testString_test.cpp
tests/design_patterns/: testFactory.cpp  testSimpleFactory.cpp
tests/modern_cpp/: testChrono.cpp
tests/stl/: testSetMerge.cpp  testSetMerge_test.cpp
tests/templates/: testTemplate.cpp
